[B]Version 1.1.28[/B]
Herexxx - playback fixed for videos with Unicode characters in the name, on Matrix