@@ -1,0 +1,3 @@
+Site URL: https://sextb.net/
+DMCA: https://sextb.net/dmca
+Contact: https://sextb.net/contact
