@@ -1,2 +1,4 @@
 [B]Version 1.1.28[/B]
 Herexxx - playback fixed for videos with Unicode characters in the name, on Matrix
+Sextb - added
+Perverzija - added search
